@@ -1,5 +1,7 @@
 * OpenDNSSEC-771: Signer. Do not log warning on deleting a missing 
   NSEC3PARAM RR.
+* OpenDNSSEC-99: Skip "are you sure" messages. Add --force and -f flag to
+  ods-enforcer-db-setup and hsmutil purge
 
 OpenDNSSEC 2.0b1 - 2016-04-14
 
